# big-ai-team

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  .secret_key  Dockerfile  README.md  build_protect.py  check_memory_content.py  concurrent_performance_report.json  context_interruption_test.py  deploy.bat  diagnose_logging_mece.py  docker-compose.yml  error_recovery_report.json  load_testing_report.json  locustfile.py  memory_injection_test.py  memory_stability_report.json  migrate_embeddings.py  move_scripts.py  package-lock.json  package.json  performance_regression_report.json  performance_test.py  performance_test_results.json  prometheus.yml  pyproject.toml  requirements.txt  resource_cleanup_report.json  search-worker.js  security_audit_report.json  stress_test.py  stress_test_results.json  system_throughput_report.json  test_agent_reach.py  test_executor_performance.py  test_monitoring.py  test_system.py  test_v2_optimization.py  (+2 more)
.github/workflows/: ci-cd.yml  report.yml
alembic/: env.py
alembic/versions/: 56839bf7ef0f_initial_migration.py  cb3edb2b7d49_add_feedback_table.py
bridge/: caller.py  interface.py  monitoring.py
channel_plugins/: console_plugin.py  file_plugin.py
core/: __init__.py  algorithm.py  channel_manager.py  monitoring.py  plugin_interface.py  plugin_loader.py  plugin_manager.py  test_core.py
docker/: Dockerfile.api  Dockerfile.bridge  Dockerfile.core
docs/: 2026最佳技术选型.md  prd.md  命名最佳实践.md
examples/: agent_reach_demo.py  cache_demo.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  i18n.ts  index.css  index.tsx
grafana/dashboards/: ace-agent-dashboard.json
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secrets.yaml  service.yaml
logstash/pipeline/: logstash.conf
memory/: long_term_memory.json  validate_file_locations.py
memory/agent_reach/: runtime_state.json
memory/palace/: mempalace.yaml
scripts/: FileExplorerTool.ts  association_retrieval_test.py  change_tracker.py  cleanup_pycache.py  copy_core_files.py  deploy_check.py  git_post_commit_hook.py  move_files_to_correct_locations.py  move_scripts.py  restructure_core.py  start_tracker.py  test_mempalace_integration.py  test_refactoring.py  validate_adapters.py  validate_file_locations.py
scripts/temp/: association_retrieval_test.py  build_protect.py  check_memory_content.py  check_project_z_memory.py  conflict_resolution_test.py  context_interruption_test.py  diagnose_logging_mece.py  memory_injection_test.py  migrate_embeddings.py  move_scripts.py  test_hook.py  test_logging_fix.py  test_mempalace_integration.py  test_v2_optimization.py  validate_adapters.py  (+1 more)
src/: main.py
tests/: demo_roi_optimizer.py  test_adapters.py  test_adapters_simple.py  test_calculator.py  test_file_manager.py  test_git_helper.py  test_logging.py  test_logging_direct.py  test_loop_self_heal.py  test_model_selector.py  test_plugin_system.py  test_protected_core.py
(+208 files in other folders)
